<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center_horizontal"
	android:isScrollContainer="true" android:background="@color/color_fondo">
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:gravity="center"
		android:paddingBottom="2dip" android:textAppearance="@android:style/TextAppearance.Large"
		android:textColor="@color/color_texto" android:text="@string/registro_titulo" />
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:gravity="center"
		android:paddingBottom="2dip" android:textColor="@color/color_texto"
		android:textAppearance="@android:style/TextAppearance.Small"
		android:text="@string/registro_sub_titulo" />
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:gravity="center_horizontal"
		android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
		android:isScrollContainer="true" android:background="@color/color_fondo">
		<Spinner android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/tipo_incidente" />
		<EditText android:id="@+id/calle" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:inputType="text"
			android:textAppearance="@android:style/TextAppearance.Large"
			android:hint="@string/calle" android:enabled="false" />
		<EditText android:id="@+id/altura" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:inputType="number"
			android:textAppearance="@android:style/TextAppearance.Large"
			android:hint="@string/altura" android:enabled="false" />
		<EditText android:id="@+id/nick" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:inputType="text"
			android:textAppearance="@android:style/TextAppearance.Large"
			android:hint="@string/nick_name" />
		<EditText android:id="@+id/dni" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:inputType="text"
			android:textAppearance="@android:style/TextAppearance.Large"
			android:hint="@string/dni" />
		<Button android:id="@+id/boton_registrar" android:gravity="center"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:enabled="true" android:textAppearance="@android:style/TextAppearance.Large"
			android:text="@string/ok" android:onClick="registrar" />
	</LinearLayout>
</LinearLayout>
