<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" android:id="@+id/login_dialogo">
	<LinearLayout android:orientation="vertical"
		android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:gravity="center_horizontal" android:isScrollContainer="true">
		<EditText android:id="@+id/nick" android:layout_width="match_parent"
			android:layout_height="wrap_content" android:inputType="text"
			android:textAppearance="@android:style/TextAppearance.Large"
			android:hint="@string/nick_name" />
		<EditText android:id="@+id/pass" android:layout_width="match_parent"
			android:layout_height="wrap_content" android:inputType="textPassword"
			android:imeOptions="actionDone" android:textAppearance="@android:style/TextAppearance.Large"
			android:hint="@string/password" />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="match_parent" android:layout_height="wrap_content">
			<Button android:id="@+id/boton_ok" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:enabled="true"
				android:text="@string/ok" android:onClick="validar"
				android:layout_margin="5dip" android:layout_weight="1" />
			<Button android:id="@+id/boton_salir" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:enabled="true"
				android:text="@string/cancelar" android:onClick="salir"
				android:layout_margin="5dip" android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>